--- a/argo-cd/overlays/production/ingress.yaml
+++ b/argo-cd/overlays/production/ingress.yaml
@@ -18,5 +18,5 @@ spec:
            name: argocd-server
            port:
              number: 80
-    host: argo-cd.104.196.111.81.xip.io
+    host: argo-cd.192.168.64.23.nip.io
 
