--- a/argo-workflows/overlays/production/ingress.yaml
+++ b/argo-workflows/overlays/production/ingress.yaml
@@ -18,5 +18,5 @@ spec:
            name: argo-server
            port:
              number: 2746
-    host: argo-workflows.104.196.111.81.xip.io
+    host: argo-workflows.192.168.64.23.nip.io
 
